welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:5: error: not found: value poseBrosse
	poseBrosse();
        ^