welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
for (i<- 0 to 3 )
{
	poseBrosse();
	leveBrosse();
	avance();
	gauche();
	
}
}
